# restate-prototype

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nats_tester.py  pyproject.toml
src/: graphql.py  main.py  models.py  service.py
src/api/: graphql.py  main.py
src/edge_link/: main.py
src/worker/: di.py  lightbulb_service.py  lightbulb_workflow.py  main.py  models.py  service.py  services.py  utils.py
tests/: conftest.py  test_lightbulb_service.py  test_lightbulb_workflow.py
