[tool.poetry]
name = "restate-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
restate_sdk = "^0.5.1"
strawberry-graphql = "^0.262.4"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
hypercorn = "^0.17.3"
nats-py = "^2.9.0"
wireup = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
